# metalearners

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  CHANGELOG.md  CHANGELOG.rst  README.md  SECURITY.md  environment.yml  mkdocs.yml  nb-convert.sh  nb-output-check.sh  nb-output-exists.sh  pixi.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/assets/: .condarc
.github/workflows/: benchmarks.yml  ci.yml  mypy.yml  package.yml
benchmarks/: benchmark.py  environment.yml  readme.md
conda.recipe/: recipe.yaml
data/: download_twins.py  readme.md
docs/: .gitignore  api_documentation.md  background.md  background.rst  conf.py  development.md  development.rst  faq.md  faq.rst  glossary.md  glossary.rst  index.md  index.rst  motivation.md  motivation.rst  parallelism.md  parallelism.rst
docs/_static/: custom.css
docs/api/: metalearners.cross_fit_estimator.rst  metalearners.data_generation.rst  metalearners.drlearner.rst  metalearners.explainer.rst  metalearners.grid_search.rst  metalearners.metalearner.rst  metalearners.outcome_functions.rst  metalearners.rlearner.rst  metalearners.rst  metalearners.slearner.rst  metalearners.tlearner.rst  metalearners.utils.rst  metalearners.xlearner.rst  modules.rst
docs/examples/: example_basic.ipynb  index.md  (+20 more)
metalearners/: __init__.py  _narwhals_utils.py  _typing.py  _utils.py  cross_fit_estimator.py  data_generation.py  drlearner.py  explainer.py  grid_search.py  metalearner.py  metalearner_grid_search_cv.py  outcome_functions.py  rlearner.py  slearner.py  tlearner.py  utils.py  xlearner.py
tests/: conftest.py  test__narwhals_utils.py  test__utils.py  test_core.py  test_cross_fit_estimator.py  test_data_generation.py  test_drlearner.py  test_grid_search.py  test_learner.py  test_metalearner.py  test_metalearner_grid_search_cv.py  test_outcome_functions.py  test_rlearner.py  test_slearner.py  test_tlearner.py  test_utils.py  test_xlearner.py
(+2 files in other folders)
